# pwr-server

./: Cargo.toml  README.md  install.sh
.cargo/: config.toml
src/: main.rs  startup.rs
templates/: index.html  index.html.tera
