# Cargo.toml

[package]
name = "pwr_server"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
askama = "0.11"
axum = "0.5"
chrono = "0.4"
coap = "0.12"
coap-lite = "0.11"
env_logger = "0.9"
log = "0.4"
structopt = "0.3"
tokio = { version = "1.21", features = ["full"] }
tower-http = { version = "0.3", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
build-data = "0.1"

[profile.release]
lto = true
opt-level = 3 #default
# opt-level = 'z'  # Optimize for size.

# EOF
