# Cargo.toml

[package]
name = "pwr_server"
version = "0.3.4"
edition = "2021"
resolver = "2"


[dependencies]
anyhow = "1.0"
askama = "0.12"
axum = "0.6"
chrono = "0.4"
coap = "0.12"
env_logger = "0.10"
log = "0.4"
structopt = "0.3"
tokio = { version = "1.27", features = ["full"] }
tower-http = { version = "0.4", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }


[build-dependencies]
build-data = "0.1"


[profile.release]
lto = true
opt-level = "s" # static
# opt-level = 3 # default
# opt-level = 'z'  # Optimize for size.

# EOF
